--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 </svg>
             </div>
             <div class="sidebar__user">
-                <div class="sidebar__name">Виталий Ушаков</div>
-                <div class="sidebar__text">Счастливый студент</div>
+                <div class="sidebar__name">Сергей Пятков</div>
+                <div class="sidebar__text">"Спасибо за бонус в тестдрайве 2!"</div>
             </div>
-            <div class="sidebar__tabs">
+            <div class="sidebar__tabs">  
                 <div class="sidebar__item">
                     <button class="sidebar__button active" id="tasks">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -93,7 +93,10 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lesson1/index.html">Урок 1</a>
+                        <a href="Hello-Arokenru/index.html">Урок 1</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="Hello-Arokenru/index.html">Урок 2</a>
                     </li>
                 </ul>
             </div>
