--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                     <li class="content__list-item">
                         <a href="hr4">Урок 4</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="css-33">Урок 5</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
