--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                     <li class="content__list-item">
                         <a href="css-33">Урок 5</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw9">Урок 5</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
