--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                     <li class="content__list-item">
                         <a href="Test">Урок 54</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw-11">Урок 64</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
