--- a/hw11/index.html
+++ b/hw11/index.html
@@ -77,8 +77,8 @@
     </section>
     <section class="about-us">
         <div class="container">
-            <p class="about-us--subtitle"></p>
-            <h2 class="about-us--title"></h2>
+            <p class="about-us--subtitle">Hello Dear</p>
+            <h2 class="about-us--title">We Are Steak In!</h2>
             <img class="about-us--decorative-element" src="" alt="">
             <p class="about-us--text">
                 Steak In has the perfect place to enjoy fine food and great cocktails with
