--- a/hw11/index.html
+++ b/hw11/index.html
@@ -11,54 +11,54 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header--inner">
+            <div class="header__inner">
                 <a class="logo" href="#">
                     <img src="" alt="">
                 </a>
                 <nav class="nav">
-                    <ul class="nav--list">
-                        <li class="nav--item">
-                            <a class="nav--link nav--link--active" href="#"></a>
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a class="nav__link nav__link--active" href="#"></a>
                         </li>
-                        <li class="nav--item">
-                            <a class="nav--link" href="#"></a>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#"></a>
                         </li>
-                        <li class="nav--item">
-                            <a class="nav--link" href="#"></a>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#"></a>
                         </li>
-                        <li class="nav--item">
-                            <a class="nav--link" href="#"></a>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#"></a>
                         </li>
-                        <li class="nav--item">
-                            <a class="nav--link" href="#"></a>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#"></a>
                         </li>
-                        <li class="nav--item">
-                            <a class="nav--link" href="#"></a>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#"></a>
                         </li>
-                        <li class="nav--item">
-                            <a class="nav--link" href="#"></a>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#"></a>
                         </li>
-                        <li class="nav--item">
-                            <a class="nav--link" href="#"></a>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#"></a>
                         </li>
                     </ul>
                 </nav>
-                <div class="header--controls">
-                    <button class="header--button" type="button"></button>
+                <div class="header__controls">
+                    <button class="header__button" type="button"></button>
                     <ul class="user-nav">
-                        <li class="user-nav--item">
-                            <a class="user-nav--link" href="#">
+                        <li class="user-nav__item">
+                            <a class="user-nav__link" href="#">
                                 <img src="" alt="">
                             </a>
                             <span>2</span>
                         </li>
-                        <li class="user-nav--item">
-                            <a class="user-nav--link" href="#">
+                        <li class="user-nav__item">
+                            <a class="user-nav__link" href="#">
                                 <img src="" alt="">
                             </a>
                         </li>
-                        <li class="user-nav--item">
-                            <a class="user-nav--link" href="#">
+                        <li class="user-nav__item">
+                            <a class="user-nav__link" href="#">
                                 <img src="" alt="">
                             </a>
                         </li>
@@ -69,68 +69,68 @@
     </header>
     <section class="welcome">
         <div class="container">
-            <p class="welcome--subtitle">Welcome To Steak In</p>
-            <h1 class="welcome--title"></h1>
-            <p class="welcome--text"></p>
-            <button class="welcome--button"></button>
+            <p class="welcome__subtitle">Welcome To Steak In</p>
+            <h1 class="welcome__title"></h1>
+            <p class="welcome__text"></p>
+            <button class="welcome__button"></button>
         </div>
     </section>
     <section class="about-us">
         <div class="container">
-            <p class="about-us--subtitle">Hello Dear</p>
-            <h2 class="about-us--title">We Are Steak In!</h2>
-            <img class="about-us--decorative-element" src="" alt="">
-            <p class="about-us--text">
+            <p class="about-us__subtitle">Hello Dear</p>
+            <h2 class="about-us__title">We Are Steak In!</h2>
+            <img class="about-us__decorative-element" src="" alt="">
+            <p class="about-us__text">
                 Steak In has the perfect place to enjoy fine food and great cocktails with
                 excellent service, in comfortable atmospheric surroundings. We have a soft dining room, combined with an
                 open kitchen, coffee take out bar and alovely awesome on site coffee roastery.
             </p>
-            <img class="about-us--signiture" src="" alt="">
+            <img class="about-us__signiture" src="" alt="">
         </div>
     </section>
     <section class="meal-cards">
         <div class="container">
-            <div class="meal-cards--card">
-                <div class="meal-cards--desk">
-                    <p class="meal-cards--price">$24.95</p>
+            <div class="meal-cards__card">
+                <div class="meal-cards__desk">
+                    <p class="meal-cards__price">$24.95</p>
                     <h3>Grilled American Fillet</h3>
-                    <img class="about-us--decorative-element" src="" alt="">
-                    <p class="meal-cards--text">
+                    <img class="about-us__decorative-element" src="" alt="">
+                    <p class="meal-cards__text">
                         Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy chesapeake crab dip with
                         artichoke, baked and topped with cheddar cheese, with crusty bread.
                     </p>
                 </div>
-                <div class="meal-cards--img">
+                <div class="meal-cards__img">
                     <img src="" alt="">
                 </div>
             </div>
 
-            <div class="meal-cards--card">
-                <div class="meal-cards--desk">
-                    <p class="meal-cards--price">$24.95</p>
+            <div class="meal-cards__card">
+                <div class="meal-cards__desk">
+                    <p class="meal-cards__price">$24.95</p>
                     <h3>Grilled American Fillet</h3>
-                    <img class="about-us--decorative-element" src="" alt="">
-                    <p class="meal-cards--text">
+                    <img class="about-us__decorative-element" src="" alt="">
+                    <p class="meal-cards__text">
                         Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy chesapeake crab dip with
                         artichoke, baked and topped with cheddar cheese, with crusty bread.
                     </p>
                 </div>
-                <div class="meal-cards--img">
+                <div class="meal-cards__img">
                     <img src="" alt="">
                 </div>
             </div>
 
-            <div class="meal-cards--card">
-                <div class="meal-cards--desk">
-                    <p class="meal-cards--price">$24.95</p>
+            <div class="meal-cards__card">
+                <div class="meal-cards__desk">
+                    <p class="meal-cards__price">$24.95</p>
                     <h3>Grilled American Fillet</h3>
-                    <img class="about-us--decorative-element" src="" alt="">
-                    <p class="meal-cards--text">
+                    <img class="about-us__decorative-element" src="" alt="">
+                    <p class="meal-cards__text">
                         Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy chesapeake crab dip with
                         artichoke, baked and topped with cheddar cheese, with crusty bread.
                     </p>
                 </div>
-                <div class="meal-cards--img">
+                <div class="meal-cards__img">
                     <img src="" alt="">
                 </div>
             </div>
