--- a/hw11/index.html
+++ b/hw11/index.html
@@ -93,7 +93,7 @@
             <div class="meal-cards__card">
                 <div class="meal-cards__desk">
                     <p class="meal-cards__price">$24.95</p>
-                    <h3>Grilled American Fillet</h3>
+                    <h3 class="meal-cards__title">Grilled American Fillet</h3>
                     <img class="about-us__decorative-element" src="" alt="">
                     <p class="meal-cards__text">
                         Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy chesapeake crab dip with
@@ -108,7 +108,7 @@
             <div class="meal-cards__card">
                 <div class="meal-cards__desk">
                     <p class="meal-cards__price">$24.95</p>
-                    <h3>Grilled American Fillet</h3>
+                    <h3 class="meal-cards__title">Grilled American Fillet</h3>
                     <img class="about-us__decorative-element" src="" alt="">
                     <p class="meal-cards__text">
                         Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy chesapeake crab dip with
@@ -123,7 +123,7 @@
             <div class="meal-cards__card">
                 <div class="meal-cards__desk">
                     <p class="meal-cards__price">$24.95</p>
-                    <h3>Grilled American Fillet</h3>
+                    <h3 meal-cards>Grilled American Fillet</h3>
                     <img class="about-us__decorative-element" src="" alt="">
                     <p class="meal-cards__text">
                         Pork fillet, ginger, garlic, honey, pepper & canola oil.creamy chesapeake crab dip with
