--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <li class="content__list-item">
                         <a href="hw11">Урок 64</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw68">Урок 68</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
