--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                     <li class="content__list-item">
                         <a href="hw68">Урок 68</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw69">Урок 69</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
