--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                     <li class="content__list-item">
                         <a href="hw72">Урок 72</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw80">Урок 80</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
