--- a/hw80/index.html
+++ b/hw80/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="../image/Grid garden final.jpg" width="100%" alt="Игра GRID GARGEN: скриншот победы">
+    <img src="../image/Grid-garden-final.jpg" width="100%" alt="Игра GRID GARGEN: скриншот победы">
 </body>
 
 </html>
