--- a/hw80/index.html
+++ b/hw80/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Скриншот победы</title>
-    <link href="../css/reset.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../hw80/css/reset.css" rel="stylesheet">
+    <link href="../hw80/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <img src="../image/Grid-garden-final.jpg" width="100%" alt="Игра GRID GARGEN: скриншот победы">
+    <img src="../hw80/image/Grid-garden-final.jpg" width="100%" alt="Игра GRID GARGEN: скриншот победы">
 </body>
 
 </html>
