--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     <li class="content__list-item">
                         <a href="hw80">Урок 80</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw85">Урок 85</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
