--- a/hw86/index.html
+++ b/hw86/index.html
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
                 </nav>
-                <img class="header__logo" src="../image/logo.png" alt="Логотип компании">
+                <img class="header__logo" src="../hw86/image/logo.png" alt="Логотип компании">
                 <ul class="header__socials socials">
                     <li class="socials__item">
                         <a class="socials__link" href="#">Telegram</a>
