--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
                     <li class="content__list-item">
                         <a href="hw86">Урок 85</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw94">Урок 94</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="hw101">Урок 101</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
