--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                     <li class="content__list-item">
                         <a href="hw101">Урок 101</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw103">Урок 103</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
