--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                     <li class="content__list-item">
                         <a href="hw103">Урок 103</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw112">Урок 112</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
