--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                     <li class="content__list-item">
                         <a href="hw112">Урок 112</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw117">Урок 117</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
