--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                     <li class="content__list-item">
                         <a href="hw117">Урок 117</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw127">Урок 127</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
