--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
                     <li class="content__list-item">
                         <a href="hw127">Урок 127</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw131">Урок 131</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
