--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
                     <li class="content__list-item">
                         <a href="hw131">Урок 131</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw136">Урок 136</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
