--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
                     <li class="content__list-item">
                         <a href="hw144">Урок 144</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw148">Урок 148</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
