--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
                     <li class="content__list-item">
                         <a href="hw148">Урок 148</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="hw151">Урок 151</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
